//
// Copyright 2018 Asylo authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package examples.grpc_server;

// A request message containing a word to be translated.
message GetTranslationRequest {
  optional string input_word = 2;
}

// A response message containing the translation of a GetTranslationRequest's
// input_word.
message GetTranslationResponse {
  optional string translated_word = 1;
}

//get tensor size as string and value as double array type 
// A request message containing a word to be translated.

message GetGradbRequest {
  optional string tensor1_shape = 1;
  repeated double tensor1 = 2;
  optional string tensor2_shape = 3;
  repeated double tensor2 = 4;
}

//make matmul response (double array type)
message GetGradbResponse {
  optional double result = 1;
}

service Translator {
  // Translates the given word.
  rpc GetTranslation(GetTranslationRequest) returns (GetTranslationResponse) {
    // errors: no input word, no translation available
  }
  rpc GetGrad_b(GetGradbRequest) returns (GetGradbResponse) {
  }
}
